Lattice: crash on setting points_u/v/w from python #56720

Closed
opened 2018-09-08 08:59:15 +02:00 by Ilja Razinkov · 3 comments

System Information
Windows 10

Blender Version
Broken: 2.79 c19ddcc975

I`m creating lattice from addon. It works fine except one thing - any attempt to set values for points_u/points_v/points_w will cause an instant crash
Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF6C877C6B0
Module : C:\Program Files\Blender Foundation\blender-2.79\blender.exe

Script piece example:
lattice_data = bpy.data.lattices.new(name=latname)
lattice_object = bpy.data.objects.new(name=latname, object_data=lattice_data)
lattice_data.points_u = 10 # this lines cause instant crash
lattice_data.points_v = 10 # this lines cause instant crash
lattice_data.points_w = 10 # this lines cause instant crash

**System Information** Windows 10 **Blender Version** Broken: 2.79 c19ddcc975f I`m creating lattice from addon. It works fine except one thing - any attempt to set values for points_u/points_v/points_w will cause an instant crash Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF6C877C6B0 Module : C:\Program Files\Blender Foundation\blender-2.79\blender.exe Script piece example: lattice_data = bpy.data.lattices.new(name=latname) lattice_object = bpy.data.objects.new(name=latname, object_data=lattice_data) lattice_data.points_u = 10 # this lines cause instant crash lattice_data.points_v = 10 # this lines cause instant crash lattice_data.points_w = 10 # this lines cause instant crash
Author

Added subscriber: @IPv6

Added subscriber: @IPv6

This issue was referenced by 4594cc25ac

This issue was referenced by 4594cc25ac8f8c07e62eb32f745be01e9444c2b4
Bastien Montagne self-assigned this 2018-09-08 15:31:15 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56720
No description provided.