Fix T56720: Lattice: crash on setting points_u/v/w from python.

One need to check that there is something to free, before trying to free it...